Fix input overflow

--- a/src/style.sass
+++ b/src/style.sass
@@ -18,7 +18,7 @@ header
 
 input#text
   display: inline-block
-  width: 100vw
+  width: calc(100vw - 0.6em)
   border: 0
   border-bottom: 1.5px solid black
 
